updated drag visuals, especially the `drag-hover` class

--- a/client/scss/mixins/_element.scss
+++ b/client/scss/mixins/_element.scss
@@ -30,12 +30,12 @@
 	}
 
 	&.drag-hover {
-		.delete-icon {
-			display: none;
-		}
-
 		* {
 			pointer-events: none;
+		}
+
+		&:not([data-drag-source]) .delete-icon {
+			display: none;
 		}
 	}
 
