--- a/client/scss/mixins/_file-icon.scss
+++ b/client/scss/mixins/_file-icon.scss
@@ -2,21 +2,36 @@
 	overflow: hidden;
 
 	.background {
+		position: relative;
+
 		height: 100%;
 		aspect-ratio: 0.76 / 1;
 
-		background-color: $color;
-
-		border-radius: 19.1885965%/14.5833333%;
-
 		display: flex;
-		justify-content: end;
+		align-items: center;
+		justify-content: center;
 
-		.dog-ear {
+		padding-left: 11.5%;
+
+		&::before {
+			content: "";
 			position: relative;
 
+			height: 100%;
+			aspect-ratio: 0.76 / 1;
+
+			background-color: $color;
+
+			border-radius: 19.1885965%/14.5833333%;
+		}
+
+		.dog-ear {
+			top: 0;
+			right: 0;
+			position: absolute;
+
 			width: 32.8947368%;
-			height: 25%;
+			height: 26%;
 
 			background-color: lighten($color, 25);
 			border-bottom-left-radius: 5.48245614% 4.16666667%;
@@ -26,7 +41,7 @@
 				height: 0;
 
 				border-style: solid;
-				border-width: 1vw;
+				border-width: 14px;
 				border-color: $background transparent transparent transparent;
 			}
 		}
