--- a/client/scss/mixins/_folder-icon.scss
+++ b/client/scss/mixins/_folder-icon.scss
@@ -1,4 +1,4 @@
-@mixin folder-icon-closed($transition: true) {
+@mixin folder-icon-closed($background-color: rgb(235, 240, 254), $transition: true) {
 	* {
 		position: absolute;
 	}
@@ -10,7 +10,7 @@
 		height: 58.333334%;
 
 		left: calc((100% - 83.333334%) / 2);
-		top: calc((100% - 58.333334%) / 2);
+		top: calc((100% - 58.333334% + 8.333334%) / 2);
 
 		border-radius: var(--folder-icon-border-radius);
 		background-color: #ffca28;
@@ -31,7 +31,7 @@
 				height: 58.333334%;
 
 				left: calc((100% - 83.333334%) / 2);
-				top: calc((100% - 58.333334%) / 2);
+				top: calc((100% - 58.333334% + 8.333334%) / 2);
 
 				border-radius: var(--folder-icon-border-radius);
 				border-top-left-radius: 0;
@@ -43,7 +43,7 @@
 				height: 8.333334%;
 
 				left: calc((100% - 83.333334%) / 2);
-				top: calc((100% - 58.333334%) / 2 - 8.333334%);
+				top: calc((100% - 58.333334% + 8.333334%) / 2 - 8.333334%);
 
 				border-top-left-radius: var(--folder-icon-border-radius);
 				background-color: #ffa000;
@@ -53,18 +53,19 @@
 				width: 0;
 				height: 0;
 
-				margin-top: calc((100% - 58.333334%) / 2 - 8.333334%);
+				margin-top: calc((100% - 58.333334% + 8.333334%) / 2 - 8.333334%);
 				margin-left: 40%;
 
+				box-sizing: border-box;
 				border-style: solid;
-				border-width: var(--folder-icon-border-radius);
-				border-color: white transparent transparent transparent;
+				border-width: 10px;
+				border-color: $background-color transparent transparent transparent;
 			}
 		}
 	}
 }
 
-@mixin folder-icon-opened($transition: true) {
+@mixin folder-icon-opened($background-color: rgb(235, 240, 254), $transition: true) {
 	* {
 		position: absolute;
 	}
@@ -76,7 +77,7 @@
 		height: 41.666667%;
 
 		left: calc((100% - 83.333334%) / 2 + var(--folder-icon-border-radius));
-		top: calc((100% - 58.333334%) / 2 + 58.333334% - 41.666667%);
+		top: calc((100% - 58.333334% + 8.333334%) / 2 + 58.333334% - 41.666667%);
 
 		border-radius: var(--folder-icon-border-radius);
 		border-bottom-left-radius: 0;
@@ -102,7 +103,7 @@
 				height: 58.333334%;
 
 				left: calc((100% - 83.333334%) / 2);
-				top: calc((100% - 58.333334%) / 2);
+				top: calc((100% - 58.333334% + 8.333334%) / 2);
 
 				border-radius: var(--folder-icon-border-radius);
 				border-top-left-radius: 0;
@@ -114,7 +115,7 @@
 				height: 8.333334%;
 
 				left: calc((100% - 83.333334%) / 2);
-				top: calc((100% - 58.333334%) / 2 - 8.333334%);
+				top: calc((100% - 58.333334% + 8.333334%) / 2 - 8.333334%);
 
 				border-top-left-radius: var(--folder-icon-border-radius);
 				background-color: #ffa000;
@@ -124,18 +125,18 @@
 				width: 0;
 				height: 0;
 
-				margin-top: calc((100% - 58.333334%) / 2 - 8.333334%);
+				margin-top: calc((100% - 58.333334% + 8.333334%) / 2 - 8.333334%);
 				margin-left: 40%;
 
 				border-style: solid;
 				border-width: var(--folder-icon-border-radius);
-				border-color: rgb(235, 240, 254) transparent transparent transparent;
+				border-color: $background-color transparent transparent transparent;
 			}
 		}
 	}
 }
 
-@mixin folder-icon-open-on-hover($transition: true) {
+@mixin folder-icon-open-on-hover($background-color: rgb(235, 240, 254), $transition: true) {
 	* {
 		position: absolute;
 	}
@@ -146,14 +147,14 @@
 			height: 41.666667%;
 
 			left: calc((100% - 83.333334%) / 2 + var(--folder-icon-border-radius));
-			top: calc((100% - 58.333334%) / 2 + 58.333334% - 41.666667%);
+			top: calc((100% - 58.333334% + 8.333334%) / 2 + 58.333334% - 41.666667%);
 			border-bottom-left-radius: 0;
 			transform: skewX(-10deg);
 		}
 
 		div.back {
 			&.triangle {
-				border-color: rgb(235, 240, 254) transparent transparent transparent;
+				border-color: $background-color transparent transparent transparent;
 			}
 		}
 	}
@@ -165,7 +166,7 @@
 		height: 58.333334%;
 
 		left: calc((100% - 83.333334%) / 2);
-		top: calc((100% - 58.333334%) / 2);
+		top: calc((100% - 58.333334% + 8.333334%) / 2);
 
 		border-radius: var(--folder-icon-border-radius);
 		background-color: #ffca28;
@@ -186,7 +187,7 @@
 				height: 58.333334%;
 
 				left: calc((100% - 83.333334%) / 2);
-				top: calc((100% - 58.333334%) / 2);
+				top: calc((100% - 58.333334% + 8.333334%) / 2);
 
 				border-radius: var(--folder-icon-border-radius);
 				border-top-left-radius: 0;
@@ -198,7 +199,7 @@
 				height: 8.333334%;
 
 				left: calc((100% - 83.333334%) / 2);
-				top: calc((100% - 58.333334%) / 2 - 8.333334%);
+				top: calc((100% - 58.333334% + 8.333334%) / 2 - 8.333334%);
 
 				border-top-left-radius: var(--folder-icon-border-radius);
 				background-color: #ffa000;
@@ -208,12 +209,12 @@
 				width: 0;
 				height: 0;
 
-				margin-top: calc((100% - 58.333334%) / 2 - 8.333334%);
+				margin-top: calc((100% - 58.333334% + 8.333334%) / 2 - 8.333334%);
 				margin-left: 40%;
 
 				border-style: solid;
 				border-width: var(--folder-icon-border-radius);
-				border-color: white transparent transparent transparent;
+				border-color: $background-color transparent transparent transparent;
 			}
 		}
 	}
