--- a/client/scss/folder-structure.scss
+++ b/client/scss/folder-structure.scss
@@ -108,7 +108,7 @@
 		padding-top: 20px;
 		padding-left: 25px;
 
-		border-radius: 15px;
+		border-radius: 0 0 15px 15px;
 
 		height: 0;
 		display: none;
