--- a/client/scss/interactive-path.scss
+++ b/client/scss/interactive-path.scss
@@ -2,9 +2,16 @@
 	display: flex;
 	flex-direction: row;
 
+	width: 80%;
+
 	margin-left: 20px;
 	padding: 0 8px;
 	border-radius: 10px;
+
+	input {
+		width: 100%;
+		height: 100%;
+	}
 
 	.interactive-path-component {
 		width: min-content;
