added drop shadow to drag description

--- a/client/scss/drag-icon.scss
+++ b/client/scss/drag-icon.scss
@@ -54,6 +54,8 @@
 
 		padding: 4px 12px 4px 8px;
 
+		box-shadow: 0px 0px 5px hsl(230deg, 17%, 90%);
+
 		&.source-only {
 			.icon {
 				display: none;
