--- a/src/client/common/ui/components/roundedContainer/RoundedContainer.css
+++ b/src/client/common/ui/components/roundedContainer/RoundedContainer.css
@@ -10,11 +10,11 @@
 
 	padding: 5px 10px;
 
-	background-color: rgb(235, 240, 254);
-
 	border-radius: 8px;
 }
 
-.rounded-container * {
-	width: fit-content;
+.rounded-container:hover {
+	cursor: pointer;
+
+	background-color: rgb(235, 240, 254);
 }
