--- a/src/client/common/ui/components/directoryContentsCollection/DirectoryContentsCollection.css
+++ b/src/client/common/ui/components/directoryContentsCollection/DirectoryContentsCollection.css
@@ -4,8 +4,22 @@
 	width: 50%;
 	height: 100%;
 
-	display: grid;
-
 	grid-template-columns: repeat(4, 1fr);
 	grid-auto-rows: max-content;
+
+	background-color: rgb(251, 252, 255);
+	border-radius: 0 25px 25px 0;
+	padding: 0 20px 20px 20px;
+}
+
+.directory-contents-collection .directory-contents-container {
+	display: grid;
+
+	position: relative;
+
+	width: 100%;
+	height: 100%;
+
+	grid-template-columns: inherit;
+	grid-auto-rows: inherit;
 }
