--- a/src/client/common/ui/components/roundedContainer/RoundedContainer.css
+++ b/src/client/common/ui/components/roundedContainer/RoundedContainer.css
@@ -8,9 +8,9 @@
 	align-items: center;
 	justify-content: space-between;
 
-	padding: 5px 10px;
+	padding: 0 15px 0 8px;
 
-	border-radius: 8px;
+	border-radius: 15px;
 }
 
 .rounded-container:hover {
