fixed bug when dragging columns; added themes, refactored drag code

--- a/src/client/common/ui/components/DOM.css
+++ b/src/client/common/ui/components/DOM.css
@@ -4,9 +4,11 @@
 	box-sizing: border-box;
 }
 
-main {
+main.dom-component {
 	position: relative;
 
 	width: 100vw;
 	height: 100vh;
+
+	background-color: var(--dom-background-color);
 }
