--- a/src/client/common/ui/components/roundedContainer/RoundedContainer.css
+++ b/src/client/common/ui/components/roundedContainer/RoundedContainer.css
@@ -16,5 +16,5 @@
 .rounded-container:hover {
 	cursor: pointer;
 
-	background-color: rgb(235, 240, 254);
+	background-color: var(--rounded-container-hover-background-color);
 }
