--- a/src/client/common/ui/components/directoryContentsCollection/DirectoryContentElement.css
+++ b/src/client/common/ui/components/directoryContentsCollection/DirectoryContentElement.css
@@ -7,8 +7,11 @@
 	display: grid;
 
 	grid-template-columns: inherit;
+	grid-auto-flow: column;
 
 	padding: 0;
+
+	z-index: 1;
 }
 
 .directory-content-element:not(:last-child) {
@@ -25,26 +28,22 @@
 
 	white-space: nowrap;
 
-	color: rgb(102, 113, 168);
+	color: var(--directory-contents-text-color);
 }
 
 .directory-content-element .wrapper {
 	display: flex;
 	align-items: center;
 	gap: 8px;
-
-	margin-left: 8px;
 }
 
 .directory-content-element .icon-wrapper {
 	display: flex;
 	align-items: center;
-	justify-content: flex-end;
+	justify-content: flex-start;
 	gap: 8px;
 
 	grid-column-start: 4;
-
-	margin-right: 15px;
 }
 
 .directory-content-element :is(.wrapper, .icon-wrapper) .icon {
@@ -53,4 +52,77 @@
 
 	background-color: blue;
 	border-radius: 50%;
+}
+
+*[data-first-column="name"] .directory-contents-container .directory-content-element .wrapper {
+	grid-column: 1 / 2;
+	margin-left: 8px;
+}
+
+*[data-first-column="size"] .directory-contents-container .directory-content-element .size {
+	grid-column: 1 / 2;
+	margin-left: 8px;
+}
+
+*[data-first-column="last-edited"] .directory-contents-container .directory-content-element .last-edited {
+	grid-column: 1 / 2;
+	margin-left: 8px;
+}
+
+*[data-first-column="icons"] .directory-contents-container .directory-content-element .icon-wrapper {
+	grid-column: 1 / 2;
+	margin-left: 8px;
+}
+
+*[data-second-column="name"] .directory-contents-container .directory-content-element .wrapper {
+	grid-column: 2 / 3;
+}
+
+*[data-second-column="size"] .directory-contents-container .directory-content-element .size {
+	grid-column: 2 / 3;
+}
+
+*[data-second-column="last-edited"] .directory-contents-container .directory-content-element .last-edited {
+	grid-column: 2 / 3;
+}
+
+*[data-second-column="icons"] .directory-contents-container .directory-content-element .icon-wrapper {
+	grid-column: 2 / 3;
+}
+
+*[data-third-column="name"] .directory-contents-container .directory-content-element .wrapper {
+	grid-column: 3 / 4;
+}
+
+*[data-third-column="size"] .directory-contents-container .directory-content-element .size {
+	grid-column: 3 / 4;
+}
+
+*[data-third-column="last-edited"] .directory-contents-container .directory-content-element .last-edited {
+	grid-column: 3 / 4;
+}
+
+*[data-third-column="icons"] .directory-contents-container .directory-content-element .icon-wrapper {
+	grid-column: 3 / 4;
+}
+
+*[data-fourth-column="name"] .directory-contents-container .directory-content-element .wrapper {
+	grid-column: 4 / 5;
+	margin-right: 15px;
+}
+
+*[data-fourth-column="size"] .directory-contents-container .directory-content-element .size {
+	grid-column: 4 / 5;
+	margin-right: 15px;
+}
+
+*[data-fourth-column="last-edited"] .directory-contents-container .directory-content-element .last-edited {
+	grid-column: 4 / 5;
+	margin-right: 15px;
+}
+
+*[data-fourth-column="icons"] .directory-contents-container .directory-content-element .icon-wrapper {
+	grid-column: 4 / 5;
+	margin-right: 15px;
+	justify-content: flex-end;
 }
