--- a/src/client/common/ui/components/directoryContentsCollection/DirectoryContentsCollection.css
+++ b/src/client/common/ui/components/directoryContentsCollection/DirectoryContentsCollection.css
@@ -1,15 +1,12 @@
 .directory-contents-collection {
 	position: relative;
 
-	width: 50%;
-	height: 100%;
-
 	grid-template-columns: repeat(4, 1fr);
 	grid-auto-rows: max-content;
 
 	background-color: var(--directory-contents-background-color);
 	border-radius: 0 25px 25px 0;
-	padding: 0 20px 20px 20px;
+	padding: 0 20px;
 
 	display: flex;
 	flex-direction: column;
@@ -25,6 +22,8 @@
 
 	grid-template-columns: inherit;
 	grid-auto-rows: inherit;
+
+	padding-bottom: 20px;
 
 	overflow-y: scroll;
 }
