--- a/src/client/common/ui/components/directoryContentsCollection/gridColumnOrderBar/GridColumnOrderBar.css
+++ b/src/client/common/ui/components/directoryContentsCollection/gridColumnOrderBar/GridColumnOrderBar.css
@@ -7,9 +7,10 @@
 	grid-auto-flow: column;
 
 	width: calc(100% + 2 * 20px);
+	max-height: 20px;
 
 	margin-left: -20px;
-	padding: 4px 20px 2px 20px;
+	padding: 3px 20px 2px 20px;
 
 	border-top-right-radius: inherit;
 
@@ -21,7 +22,7 @@
 
 	font-family: Montserrat Medium;
 	font-weight: 500;
-	font-size: small;
+	font-size: 12px;
 
 	white-space: nowrap;
 
@@ -30,7 +31,6 @@
 	background-color: inherit;
 	border-radius: 5px;
 
-	padding: 2px 5px;
 	margin-right: 5px;
 }
 
