--- a/src/client/common/ui/components/roundedContainer/RoundedContainer.css
+++ b/src/client/common/ui/components/roundedContainer/RoundedContainer.css
@@ -2,7 +2,7 @@
 	position: relative;
 
 	width: 100%;
-	height: fit-content;
+	height: 40px;
 
 	display: flex;
 	align-items: center;
@@ -11,6 +11,10 @@
 	padding: 0 15px 0 8px;
 
 	border-radius: 15px;
+}
+
+.rounded-container.selected {
+	background-color: var(--rounded-container-hover-background-color);
 }
 
 .rounded-container:hover {
