--- a/src/client/common/ui/themes.css
+++ b/src/client/common/ui/themes.css
@@ -1,10 +1,14 @@
 main[data-theme="light"] {
 	--directory-contents-text-color: rgb(102, 113, 168);
+	--directory-contents-hover-text-color: rgb(57, 97, 237);
 	--directory-contents-order-bar-header-text-color: rgb(158, 165, 199);
 	--directory-contents-order-bar-header-hover-text-color: rgb(57, 97, 237);
 	--directory-contents-background-color: rgb(251, 252, 255);
+	--directory-contents-icon-color: rgb(169, 174, 199);
+	--directory-contents-icon-hover-color: rgb(57, 97, 237);
 	--rounded-container-hover-background-color: rgb(235, 240, 254);
 	--dom-background-color: rgb(248, 248, 248);
+	--directory-tree-background-color: rgb(255, 255, 255);
 }
 
 main[data-theme="dark"] {
