--- a/src/client/common/ui/components/directoryContentsCollection/DirectoryContentElement.css
+++ b/src/client/common/ui/components/directoryContentsCollection/DirectoryContentElement.css
@@ -40,6 +40,9 @@
 }
 
 .directory-content-element .icon-wrapper {
+	pointer-events: none;
+	opacity: 0;
+
 	display: flex;
 	align-items: center;
 	justify-content: flex-start;
@@ -73,6 +76,11 @@
 	background-color: #ffca28;
 	transform: skewX(-10deg);
 	transition: all 0.05s linear;
+}
+
+.directory-content-element:is(:hover, .selected) .icon-wrapper {
+	opacity: 1;
+	pointer-events: all;
 }
 
 *[data-first-column="name"] .directory-contents-container .directory-content-element .wrapper {
