--- a/src/client/common/ui/components/roundedContainer/RoundedContainer.css
+++ b/src/client/common/ui/components/roundedContainer/RoundedContainer.css
@@ -6,7 +6,7 @@
 
 	display: flex;
 	align-items: center;
-	justify-content: space-between;
+	justify-content: flex-start;
 
 	padding: 0 15px 0 8px;
 
