--- a/src/client/common/ui/themes.css
+++ b/src/client/common/ui/themes.css
@@ -9,6 +9,11 @@ main[data-theme="light"] {
 	--rounded-container-hover-background-color: rgb(235, 240, 254);
 	--dom-background-color: rgb(248, 248, 248);
 	--directory-tree-background-color: rgb(255, 255, 255);
+	--directory-tree-item-text-color: rgb(102, 113, 168);
+	--directory-tree-item-arrow-icon-color: rgb(169, 174, 199);
+	--directory-tree-item-arrow-icon-hover-color: rgb(57, 97, 237);
+	--directory-tree-item-icon-color: rgb(169, 174, 199);
+	--directory-tree-item-icon-hover-color: rgb(57, 97, 237);
 }
 
 main[data-theme="dark"] {
