--- a/src/client/common/ui/components/roundedContainer/RoundedContainer.css
+++ b/src/client/common/ui/components/roundedContainer/RoundedContainer.css
@@ -13,12 +13,10 @@
 	border-radius: 15px;
 }
 
-.rounded-container.selected {
+.rounded-container:is(:hover, .selected, .drag-hover) {
 	background-color: var(--rounded-container-hover-background-color);
 }
 
 .rounded-container:hover {
 	cursor: pointer;
-
-	background-color: var(--rounded-container-hover-background-color);
 }
