implemented external dropping on contents collection element (background), fixed drag-hover visuals, display right visuals on external dropping

--- a/src/client/common/ui/components/directoryContentsCollection/DirectoryContentsCollection.css
+++ b/src/client/common/ui/components/directoryContentsCollection/DirectoryContentsCollection.css
@@ -12,6 +12,10 @@
 	flex-direction: column;
 }
 
+.directory-contents-collection.drag-hover {
+	background-color: var(--directory-contents-drag-hover-background-color);
+}
+
 .directory-contents-collection .directory-contents-container {
 	display: grid;
 
