--- a/src/client/common/ui/themes.css
+++ b/src/client/common/ui/themes.css
@@ -1,6 +1,7 @@
 html:has(main[data-theme="light"]) {
 	--directory-contents-text-color: rgb(102, 113, 168);
 	--directory-contents-hover-text-color: rgb(57, 97, 237);
+	--directory-contents-drag-hover-background-color: rgb(235, 240, 254);
 	--directory-contents-order-bar-header-text-color: rgb(158, 165, 199);
 	--directory-contents-order-bar-header-hover-text-color: rgb(57, 97, 237);
 	--directory-contents-background-color: rgb(251, 252, 255);
@@ -17,8 +18,8 @@ html:has(main[data-theme="light"]) {
 	--context-menu-element-title-color: rgb(102, 113, 168);
 	--context-menu-element-hotkey-color: rgb(158, 165, 199);
 	--context-menu-element-icon-color: rgb(102, 113, 168);
-	--context-menu-element-hover-background-color: hsl(224, 90%, 96%);
-	--context-menu-danger-element-hover-background-color: hsl(354, 100%, 97%);
+	--context-menu-element-hover-background-color: rgb(236, 241, 254);
+	--context-menu-danger-element-hover-background-color: rgb(255, 240, 241);
 	--context-menu-danger-element-hover-title-color: #ff5768;
 	--context-menu-danger-element-hover-icon-color: #ff5768;
 	--context-menu-danger-element-hover-hotkey-color: #ff5768;
