--- a/src/client/common/ui/components/directoryContentsCollection/DirectoryContentsCollection.css
+++ b/src/client/common/ui/components/directoryContentsCollection/DirectoryContentsCollection.css
@@ -1,7 +1,7 @@
 .directory-contents-collection {
 	position: relative;
 
-	grid-template-columns: repeat(4, 1fr);
+	grid-template-columns: 1fr 1fr 1fr 1fr;
 	grid-auto-rows: max-content;
 
 	background-color: var(--directory-contents-background-color);
